syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

enum InferenceStatus {
  STARTED = 0;
  FINISHED = 1;
  VALIDATED = 2;
  INVALIDATED = 3;
}

message Inference {
  string index = 1;
  string inferenceId = 2;
  string promptHash = 3;
  string promptPayload = 4;
  string responseHash = 5;
  string responsePayload = 6;
  uint64 promptTokenCount = 7;
  uint64 completionTokenCount = 8;
  string receivedBy = 9;
  string executedBy = 10;
  InferenceStatus status = 11;
  int64 startBlockHeight = 12;
  int64 endBlockHeight = 13;
  int64 startBlockTimestamp = 14;
  int64 endBlockTimestamp = 15;
  string model = 16;
  uint64 maxTokens = 17;
  uint64 actualCost = 18;
  uint64 escrowAmount = 19;
}

